[package]
name = "wasm_chip_8"
version = "0.1.0"
authors = ["Andrew Goacher <andrewgoacher@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.48"
chip8 = { git = "https://github.com/andrewgoacher/chip8" }
